vectorisation of matVec(float[] and matVecF32raw